--- a/single_file.html
+++ b/single_file.html
@@ -1334,7 +1334,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_vUpUP">
+    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_NQyjp">
     <button class="suite__name suite--failure u-full-width" onclick="contract(this.parentElement)">Multi</button>
     <div class="suite__contents">
         <div class="properties">
@@ -1367,7 +1367,7 @@ there.
     </table>
 </div>
 
-        <div class="tests"><div class="test" id="Is_An_Error_B479u">
+        <div class="tests"><div class="test" id="Is_An_Error_LxJwb">
     <button class="test__name test--error u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
@@ -1375,7 +1375,7 @@ there.
     <div class="test__message">java.lang.RuntimeException: There was an error</div>
 </div>
 
-<div class="test" id="It_Is_A_Failure_uLBBD">
+<div class="test" id="It_Is_A_Failure_XgYDS">
     <button class="test__name test--failure u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
@@ -1383,7 +1383,7 @@ there.
     <div class="test__message">FILENAME:XX<br />Expected<br />    <string>: Luke<br />to equal<br />    <string>: luke</div>
 </div>
 
-<div class="test" id="It_Is_A_Pass_lrtWk">
+<div class="test" id="It_Is_A_Pass_ROlVj">
     <button class="test__name test--passed u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
@@ -1391,7 +1391,7 @@ there.
     
 </div>
 
-<div class="test" id="It_Is_Skipped_h3XXI">
+<div class="test" id="It_Is_Skipped_gRvdU">
     <button class="test__name test--skipped u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
@@ -1402,7 +1402,7 @@ there.
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is An Error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_An_Error_B479u"},{"name":"It Is A Failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_Is_A_Failure_uLBBD"},{"name":"It Is A Pass","type":"passed","time":"0.000625","id":"It_Is_A_Pass_lrtWk"},{"name":"It Is Skipped","type":"skipped","time":"0","id":"It_Is_Skipped_h3XXI"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_vUpUP"}}
+    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is An Error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_An_Error_LxJwb"},{"name":"It Is A Failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_Is_A_Failure_XgYDS"},{"name":"It Is A Pass","type":"passed","time":"0.000625","id":"It_Is_A_Pass_ROlVj"},{"name":"It Is Skipped","type":"skipped","time":"0","id":"It_Is_Skipped_gRvdU"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_NQyjp"}}
 
 function createToggleDisplay(by) {
     return function(element) {
