--- a/single_file.html
+++ b/single_file.html
@@ -1335,10 +1335,10 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_dUZLc">
+    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_3d5Ny">
     <button class="suite__name suite--failure u-full-width" onclick="cta.contract.local.suite(this.parentElement)">Multi</button>
     <div class="suite__contents">
-        <div id=properties_ZJhZp class="properties">
+        <div id=properties_JvkXn class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1368,7 +1368,7 @@ there.
     </table>
 </div>
 
-        <div class="tests"><div class="test" id="Is_An_Error_sE3BV">
+        <div class="tests"><div class="test" id="Is_An_Error_tP1qt">
     <button class="test__name test--error u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
@@ -1376,7 +1376,7 @@ there.
     <div class="test__message">java.lang.RuntimeException: There was an error</div>
 </div>
 
-<div class="test" id="It_Is_A_Failure_NFG7A">
+<div class="test" id="It_Is_A_Failure_gDEhD">
     <button class="test__name test--failure u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
@@ -1384,7 +1384,7 @@ there.
     <div class="test__message">FILENAME:XX<br />Expected<br />    <string>: Luke<br />to equal<br />    <string>: luke</div>
 </div>
 
-<div class="test" id="It_Is_A_Pass_oH20P">
+<div class="test" id="It_Is_A_Pass_iN3OM">
     <button class="test__name test--passed u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
@@ -1392,7 +1392,7 @@ there.
     
 </div>
 
-<div class="test" id="It_Is_Skipped_PAnwm">
+<div class="test" id="It_Is_Skipped_NxcSK">
     <button class="test__name test--skipped u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
@@ -1403,7 +1403,7 @@ there.
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is An Error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_An_Error_sE3BV"},{"name":"It Is A Failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_Is_A_Failure_NFG7A"},{"name":"It Is A Pass","type":"passed","time":"0.000625","id":"It_Is_A_Pass_oH20P"},{"name":"It Is Skipped","type":"skipped","time":"0","id":"It_Is_Skipped_PAnwm"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go","id":"properties_ZJhZp"},"time":"0.0160106","type":"failure","id":"Multi_dUZLc"}}
+    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is An Error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_An_Error_tP1qt"},{"name":"It Is A Failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_Is_A_Failure_gDEhD"},{"name":"It Is A Pass","type":"passed","time":"0.000625","id":"It_Is_A_Pass_iN3OM"},{"name":"It Is Skipped","type":"skipped","time":"0","id":"It_Is_Skipped_NxcSK"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go","id":"properties_JvkXn"},"time":"0.0160106","type":"failure","id":"Multi_3d5Ny"}}
 
 function createToggleDisplay(by) {
     return function(element) {
@@ -1557,11 +1557,20 @@ var cta = {
                     suiteElement.className = suiteElement.className.replace(' hide--searching', '')
                 else if (isNotHidden)
                     suiteElement.className = suiteElement.className + ' hide--searching'
-
             })
         },
         tests: function(value) {
-            console.log(value)
+            value = value.toUpperCase()
+            forEachTest(function(test) {
+                var testElement = document.getElementById(test.id)
+                var isNotHidden = testElement.className.indexOf('hide--searching') === -1
+                if (value === '')
+                    testElement.className = testElement.className.replace(' hide--searching', '')
+                else if (test.name.toUpperCase().indexOf(value) !== -1)
+                    testElement.className = testElement.className.replace(' hide--searching', '')
+                else if (isNotHidden)
+                    testElement.className = testElement.className + ' hide--searching'
+            })
         },
         properties: function(value) {
             console.log(value)
