--- a/single_file.html
+++ b/single_file.html
@@ -1335,10 +1335,10 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_3d5Ny">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_RR5U9">
     <button class="suite__name suite--failure u-full-width" onclick="cta.contract.local.suite(this.parentElement)">Multi</button>
     <div class="suite__contents">
-        <div id=properties_JvkXn class="properties">
+        <div id=properties_Ls5FT class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1348,19 +1348,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr>
+            <tr id=property_LykGU>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr>
+<tr id=property_vk0od>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr>
+<tr id=property_39qeG>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr>
+<tr id=property_yW3VD>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1368,23 +1368,27 @@ there.
     </table>
 </div>
 
-        <div class="tests"><div class="test" id="Is_An_Error_tP1qt">
+        <div class="tests"><div class="test" id="test_VGjM2">
     <button class="test__name test--error u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
     </button>
-    <div class="test__message">java.lang.RuntimeException: There was an error</div>
+    <div id="message_Qb3DD" class="test__message">java.lang.RuntimeException: There was an error</div>
 </div>
 
-<div class="test" id="It_Is_A_Failure_gDEhD">
+<div class="test" id="test_TSuNN">
     <button class="test__name test--failure u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
     </button>
-    <div class="test__message">FILENAME:XX<br />Expected<br />    <string>: Luke<br />to equal<br />    <string>: luke</div>
+    <div id="message_wdNrL" class="test__message">FILENAME:XX
+Expected
+    <string>: Luke
+to equal
+    <string>: luke</div>
 </div>
 
-<div class="test" id="It_Is_A_Pass_iN3OM">
+<div class="test" id="test_20qos">
     <button class="test__name test--passed u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
@@ -1392,7 +1396,7 @@ there.
     
 </div>
 
-<div class="test" id="It_Is_Skipped_NxcSK">
+<div class="test" id="test_8pCRS">
     <button class="test__name test--skipped u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
@@ -1403,8 +1407,7 @@ there.
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is An Error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_An_Error_tP1qt"},{"name":"It Is A Failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_Is_A_Failure_gDEhD"},{"name":"It Is A Pass","type":"passed","time":"0.000625","id":"It_Is_A_Pass_iN3OM"},{"name":"It Is Skipped","type":"skipped","time":"0","id":"It_Is_Skipped_NxcSK"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go","id":"properties_JvkXn"},"time":"0.0160106","type":"failure","id":"Multi_3d5Ny"}}
-
+    <script type="text/javascript">var suites = [{"id":"suite_RR5U9","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_Ls5FT","props":[{"name":"flag-type","value":"bug","id":"property_LykGU"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_vk0od"},{"name":"Has a name","value":"true","id":"property_39qeG"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_yW3VD"}]}],"testCases":[{"id":"test_VGjM2","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_Qb3DD","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_TSuNN","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_wdNrL","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_20qos","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_8pCRS","time":"0","name":"It Is Skipped","type":"skipped"}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
@@ -1573,7 +1576,10 @@ var cta = {
             })
         },
         properties: function(value) {
-            console.log(value)
+            value = value.toUpperCase()
+            forEachProperties(function(properties) {
+                console.log(properties)
+            })
         }
     }
 }
