--- a/single_file.html
+++ b/single_file.html
@@ -1218,7 +1218,7 @@ there.
 }
 
 .properties__list,
-.messages,
+.test__messages,
 .options__cta {
     margin-top: -10px;
     border: 1px solid #bbb;
@@ -1235,6 +1235,10 @@ there.
 .test__name {
     margin-bottom: 0;
     border-radius: 4px 4px 0 0;
+}
+
+.test__message {
+
 }
 
 .test--passed,
@@ -1335,10 +1339,10 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_Kvwux">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_Mpg2W">
     <button class="suite__name suite--failure u-full-width" onclick="cta.contract.local.suite(this.parentElement)">Multi</button>
     <div class="suite__contents">
-        <div id=properties_Ugpd5 class="properties">
+        <div id=properties_Q0SfY class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1348,19 +1352,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_8FmyM>
+            <tr id=property_bXlxI>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_NBx29>
+<tr id=property_YtzTg>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_EOvWA>
+<tr id=property_8u2CM>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_YJnoJ>
+<tr id=property_lG2jP>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1368,47 +1372,47 @@ there.
     </table>
 </div>
 
-        <div class="tests"><div class="test" id="test_WNg3l">
+        <div class="tests"><div class="test" id="test_jC7QE">
     <button class="test__name test--error u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
     </button>
-    <div class="messages"><div id="message_TwZ5E" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_Tmtf8" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_L0T2X" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_g0uAp" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_WUM0G">
+<div class="test" id="test_P61dN">
     <button class="test__name test--failure u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
     </button>
-    <div class="messages"><div id="message_za4Jp" class="test__message">FILENAME:XX
+    <div class="test__messages"><div id="message_1tgum" class="test__message">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div></div>
 </div>
 
-<div class="test" id="test_OgGkw">
+<div class="test" id="test_UGg86">
     <button class="test__name test--passed u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
     </button>
-    <div class="messages"></div>
+    <div class="test__messages"></div>
 </div>
 
-<div class="test" id="test_0jSYh">
+<div class="test" id="test_IJc59">
     <button class="test__name test--skipped u-full-width" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
     </button>
-    <div class="messages"></div>
+    <div class="test__messages"></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_Kvwux","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_Ugpd5","props":[{"name":"flag-type","value":"bug","id":"property_8FmyM"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_NBx29"},{"name":"Has a name","value":"true","id":"property_EOvWA"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_YJnoJ"}]}],"testCases":[{"id":"test_WNg3l","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_TwZ5E","message":"java.lang.RuntimeException: There was an error"},{"id":"message_Tmtf8","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_WUM0G","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_za4Jp","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_OgGkw","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_0jSYh","time":"0","name":"It Is Skipped","type":"skipped"}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_Mpg2W","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_Q0SfY","props":[{"name":"flag-type","value":"bug","id":"property_bXlxI"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_YtzTg"},{"name":"Has a name","value":"true","id":"property_8u2CM"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_lG2jP"}]}],"testCases":[{"id":"test_jC7QE","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_L0T2X","message":"java.lang.RuntimeException: There was an error"},{"id":"message_g0uAp","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_P61dN","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_1tgum","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_UGg86","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_IJc59","time":"0","name":"It Is Skipped","type":"skipped"}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
